WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280692
AirPods unmuting should not unmute camera if website muted camera
https://bugs.webkit.org/show_bug.cgi?id=280692
Summary
AirPods unmuting should not unmute camera if website muted camera
youenn fablet
Reported
2024-10-01 11:12:30 PDT
AirPods unmuting should not unmute camera if website muted camera
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-01 11:12:53 PDT
<
rdar://problem/137065964
>
youenn fablet
Comment 2
2024-10-01 11:18:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34510
EWS
Comment 3
2024-10-01 14:43:10 PDT
Committed
284514@main
(5bd5f3476b1a): <
https://commits.webkit.org/284514@main
> Reviewed commits have been landed. Closing PR #34510 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug