AirPods unmuting should not unmute camera if website muted camera https://bugs.webkit.org/show_bug.cgi?id=280692 rdar://problem/137065964

Reviewed by Eric Carlson.

Before the patch, if website muted camera and microphone,
AirPods unmuting would unmute both camera and microphone.
This was due to WebPageProxy::microphoneMuteStatusChanged unmuting microphone
and WebPageProxy::setMuted updating the website desired muting states.

Instead, we are now updating the website desired muting state for microphone in WebPageProxy::microphoneMuteStatusChanged
and skipping the website desired muting state update in WebPageProxy::setMuted.

Manually tested.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::microphoneMuteStatusChanged):

Canonical link: https://commits.webkit.org/284514@main